curly bracket change for script command